# open_api_spec.yaml
@@ -35,7 +35,7 @@ paths:
         description: The unique identifier of the project to retrieve.
         required: true
         schema:
-          $ref: '#/components/schemas/UserId'
+          $ref: '#/components/schemas/ProjectId'
       responses:
         '200':
           description: Project was successfully found.
@@ -54,7 +54,7 @@ paths:
         description: The unique identifier of the project to delete.
         required: true
         schema:
-          $ref: '#/components/schemas/UserId'
+          $ref: '#/components/schemas/ProjectId'
       responses:
         '204':
           description: Project was successfully deleted.
@@ -72,11 +72,15 @@ components:
       - status
       properties:
         id:
-          $ref: '#/components/schemas/UserId'
+          $ref: '#/components/schemas/ProjectId'
         status:
           $ref: '#/components/schemas/ProjectStatus'
         title:
           type: string
+    ProjectId:
+      type: integer
+      format: int64
+      minimum: 0
     ProjectStatus:
       type: string
       enum:
@@ -84,7 +88,3 @@ components:
       - InProgress
       - InValidation
       - Complete
-    UserId:
-      type: integer
-      format: int64
-      minimum: 0
